--- a/package.json
+++ b/package.json
@@ -15,49 +15,53 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-table": "^8.21.3",
     "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.43.1",
+    "drizzle-orm": "^0.44.1",
     "init": "^0.1.2",
     "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "next": "15.3.3",
     "next-safe-action": "^7.10.8",
     "next-themes": "^0.4.6",
-    "pg": "^8.15.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "pg": "^8.16.0",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^19.1.0",
     "react-number-format": "^5.4.4",
-    "shadcn": "^2.5.0",
-    "sonner": "^2.0.3",
+    "shadcn": "^2.6.0",
+    "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.3.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "react-hook-form": "^7.56.4",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "react-hook-form": "^7.57.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.0",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5",
-    "zod": "^3.25.34"
+    "zod": "^3.25.46"
   }
 }
