--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "next": "15.3.3",
     "next-safe-action": "^7.10.8",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "pg": "^8.16.0",
     "react": "^19.1.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-number-format": "^5.4.4",
     "shadcn": "^2.6.0",
