--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-number-format": "^5.4.4",
+    "recharts": "^2.15.3",
     "shadcn": "^2.6.0",
     "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0"
